# StreamUpdateMonitor

./: .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml
config/: config.sample.yaml
notification/: Apprise.py  __init__.py  stdout.py
services/: __init__.py  netflix.py
utils/: base_object.py  config.py  debug_log.py  scheduler.py  sql.py
